--- a/docs/assets/styles/homepage.css
+++ b/docs/assets/styles/homepage.css
@@ -23,7 +23,7 @@
 }
 
 .banner-content {
-    background-image: url('/assets/images/banner.png');
+    background-image: url('../images/banner.png');
     background-size: cover;
     background-position: center center;
     padding: 10vh 0;
